header png, images cleanup, team.less

--- a/public/index.html
+++ b/public/index.html
@@ -52,8 +52,8 @@
           <div class="navigation-logo">
             <a href="index.html">
               <img
-                src="./assets/how-to-logo-navigation.svg"
-                alt="How to logo"
+                src="./assets/how-to-logo-header.png"
+                alt="Navigation - How-to logo "
               />
             </a>
           </div>
@@ -129,7 +129,7 @@
             <img
               class="header-image-img"
               src="./assets/header-image-color-001.svg"
-              alt=""
+              alt="Learn, discover, contribute in the all new How-to app!"
             />
           </div>
         </div>
@@ -139,7 +139,7 @@
           <img
             class="content-image-img"
             src="./assets/learn-image-color-001.svg"
-            alt="A person leaning against a very large cell phone"
+            alt="Learn - How-To has everything you need for a healthier, happier, and more productive day"
           />
         </div>
         <div class="content-text">
@@ -164,7 +164,7 @@
           <img
             class="content-image-img"
             src="./assets/discover-image-color-001.svg"
-            alt="A person in the center ofa swirl of documents"
+            alt="Discover - Let us serve up a random how-to so you’ll always leave here a little wiser than you came."
           />
         </div>
         <div class="content-text">
@@ -184,7 +184,7 @@
           <img
             class="content-image-img"
             src="./assets/contribute-image-color-001.svg"
-            alt="A person pinning screenshots to a wall"
+            alt="Contribute - How-To makes it easy to create and edit your own how-tos and share them with our community of passionate learners."
           />
         </div>
         <div class="content-text">
@@ -201,60 +201,74 @@
       <section class="team" id="team">
         <div class="team-title"><h2>Meet The Team</h2></div>
         <div class="team-cards">
-          <div class="team-card">
-            <img
-              class="team-img"
-              src="./assets/team/thomas-greenhalgh.jpg"
-              alt=""
-            />
-            <p class="team-member-name">Thomas Greenhalgh</p>
-            <p class="team-member-title">Lead Software Engineer</p>
-          </div>
-          <div class="team-card">
-            <img
-              class="team-img"
-              src="./assets/team/kayanna-chandler.jpg"
-              alt=""
-            />
-            <p class="team-member-name">Kayanna Chandler</p>
-            <p class="team-member-title">Back End Software Engineer</p>
-          </div>
-          <div class="team-card">
-            <img
-              class="team-img"
-              src="./assets/team/jonathan-picazo.jpg"
-              alt=""
-            />
-            <p class="team-member-name">Jonathan Picazo</p>
-            <p class="team-member-title">Front End Software Engineer</p>
-          </div>
-          <div class="team-card">
-            <img
-              class="team-img"
-              src="./assets/team/thomas-folbrecht.jpg"
-              alt=""
-            />
-            <p class="team-member-name">Thomas Folbrecht</p>
-            <p class="team-member-title">Front End Software Engineer</p>
-          </div>
-          <div class="team-card">
-            <img
-              class="team-img"
-              src="./assets/team/daniel-oneill.jpg"
-              alt=""
-            />
-            <p class="team-member-name">Daniel O'Neill</p>
-            <p class="team-member-title">Web UI Software Engineer</p>
-          </div>
-          <div class="team-card">
-            <img
-              class="team-img"
-              src="./assets/team/christian-ipanaque.jpg"
-              alt=""
-            />
-            <p class="team-member-name">Christian Ipanaque</p>
-            <p class="team-member-title">Web UI Software Engineer</p>
-          </div>
+          <a class="team-card-link" href="https://github.com/tfolbrecht">
+            <div class="team-card">
+              <div class="team-image">
+                <img
+                  class="team-img"
+                  src="./assets/team/thomas-greenhalgh.jpg"
+                  alt="Thomas Greenhalgh - Lead Software Engineer"
+                />
+              </div>
+              <p class="team-member-name">Thomas Greenhalgh</p>
+              <p class="team-member-title">Lead Software Engineer</p>
+            </div>
+          </a>
+          <a class="team-card-link" href="https://github.com/tfolbrecht">
+            <div class="team-card">
+              <img
+                class="team-img"
+                src="./assets/team/kayanna-chandler.jpg"
+                alt="Kayanna Chandler - Back End Software Engineer"
+              />
+              <p class="team-member-name">Kayanna Chandler</p>
+              <p class="team-member-title">Back End Software Engineer</p>
+            </div>
+          </a>
+          <a class="team-card-link" href="https://github.com/tfolbrecht">
+            <div class="team-card">
+              <img
+                class="team-img"
+                src="./assets/team/jonathan-picazo.jpg"
+                alt="Jonathan Picazo - Front End Software Engineer"
+              />
+              <p class="team-member-name">Jonathan Picazo</p>
+              <p class="team-member-title">Front End Software Engineer</p>
+            </div>
+          </a>
+          <a class="team-card-link" href="https://github.com/tfolbrecht">
+            <div class="team-card">
+              <img
+                class="team-img"
+                src="./assets/team/thomas-folbrecht.jpg"
+                alt="Thomas Folbrecht - Front End Software Engineer"
+              />
+              <p class="team-member-name">Thomas Folbrecht</p>
+              <p class="team-member-title">Front End Software Engineer</p>
+            </div>
+          </a>
+          <a class="team-card-link" href="https://github.com/danpatrickoneill">
+            <div class="team-card">
+              <img
+                class="team-img"
+                src="./assets/team/daniel-oneill.jpg"
+                alt="Daniel O'Neill - Web UI Software Engineer"
+              />
+              <p class="team-member-name">Daniel O'Neill</p>
+              <p class="team-member-title">Web UI Software Engineer</p>
+            </div>
+          </a>
+          <a class="team-card-link" href="https://github.com/chrisipanaque">
+            <div class="team-card">
+              <img
+                class="team-img"
+                src="./assets/team/christian-ipanaque.jpg"
+                alt="Christian Ipanaque - Web UI Software Engineer"
+              />
+              <p class="team-member-name">Christian Ipanaque</p>
+              <p class="team-member-title">Web UI Software Engineer</p>
+            </div>
+          </a>
         </div>
       </section>
     </div>
@@ -262,7 +276,7 @@
       <img
         class="footer-img"
         src="./assets/footer-image-color-001.svg"
-        alt="Person sitting with tablet computer in front of a flowchart"
+        alt="How-to - A community of high achievers and scholars that prioritize everyday learning."
       />
       <div class="footer-navigation-links">
         <a class="footer-navigation-link" href="#learn">Learn</a>
@@ -271,7 +285,10 @@
         <a class="footer-navigation-link" href="#features">Features</a>
         <a class="footer-navigation-link" href="#team">Team</a>
       </div>
-      <a class="footer-button-anchor" href="https://howto-frontend.netlify.com/">
+      <a
+        class="footer-button-anchor"
+        href="https://howto-frontend.netlify.com/"
+      >
         <button class="footer-button">
           Join Now
         </button>
