Added header animations and fixed header logo

--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,22 @@
     <!-- GSAP Script End -->
   </head>
   <body>
-    <div class="container">
+    <div id="home" class="container">
       <header class="header">
         <nav class="navigation">
           <div class="navigation-logo">
-            <a href="index.html">
+            <a href="#home">
               <img
                 src="./assets/how-to-logo-header.png"
                 alt="Navigation - How-to logo "
+              />
+            </a>
+          </div>
+          <div class="navigation-logo-fixed">
+            <a href="#home">
+              <img
+                src="./assets/how-to-logo-header.png"
+                alt="Navigation - How to logo"
               />
             </a>
           </div>
