team section overlay adjustments, accessibility checks, copyright text on footer, header logo fixed position bug fix

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>How-To: Learn Every Day</title>
+    <title>How-To: Learn. Discover. Contribute.</title>
     <link href="./css/index.css" rel="stylesheet" />
     <!-- Favicon -->
     <link
@@ -80,10 +80,11 @@
             </a>
           </div>
           <div class="navigation-cta">
-            <a href="https://howto-frontend.netlify.com/login">
+            <a href="https://howto-frontend.netlify.com/login"
+            target="_blank">
               <div class="navigation-cta-login">Login</div>
             </a>
-            <a href="https://howto-frontend.netlify.com/signup">
+            <a href="https://howto-frontend.netlify.com/signup" target="_blank">
               <button class="navigation-cta-signup">Sign Up</button>
             </a>
           </div>
@@ -96,11 +97,13 @@
             <a
               class="navigation-link-mobile"
               href="https://howto-frontend.netlify.com/login"
+              target="_blank"
               >Login</a
             >
             <a
               class="navigation-link-mobile"
               href="https://howto-frontend.netlify.com/signup"
+              target="_blank"
               >Sign Up</a
             >
           </div>
@@ -120,12 +123,12 @@
               <div class="header-description-button-container">
                 <a
                   class="header-description-login-anchor"
-                  href="https://howto-frontend.netlify.com/login"
+                  href="https://howto-frontend.netlify.com/login" target="_blank"
                   ><button class="header-description-login">Login</button></a
                 >
                 <a
                   class="header-description-joinnow-anchor"
-                  href="https://howto-frontend.netlify.com/signup"
+                  href="https://howto-frontend.netlify.com/signup" target="_blank"
                   ><button class="header-description-joinnow">
                     Join Now
                   </button></a
@@ -137,7 +140,7 @@
             <img
               class="header-image-img"
               src="./assets/header-image-color-001.svg"
-              alt="Learn, discover, contribute in the all new How-to app!"
+              alt="Student that enjoys reading and learning and discovering."
             />
           </div>
         </div>
@@ -172,7 +175,7 @@
           <img
             class="content-image-img"
             src="./assets/discover-image-color-001.svg"
-            alt="Discover - Let us serve up a random how-to so you’ll always leave here a little wiser than you came."
+            alt="Discover - Let us serve up a random how-to so you’ll always leave our app a little wiser than you came."
           />
         </div>
         <div class="content-text">
@@ -209,7 +212,7 @@
       <section class="team" id="team">
         <div class="team-title"><h2>Meet The Team</h2></div>
         <div class="team-cards">
-          <a class="team-card-link" href="https://github.com/tfolbrecht">
+          <a class="team-card-link" href="https://github.com/tgreenhalgh" target="_blank">
             <div class="team-card">
               <div class="team-image">
                 <img
@@ -217,62 +220,94 @@
                   src="./assets/team/thomas-greenhalgh.jpg"
                   alt="Thomas Greenhalgh - Lead Software Engineer"
                 />
+                <div class="overlay">
+                  <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                </div>
               </div>
               <p class="team-member-name">Thomas Greenhalgh</p>
               <p class="team-member-title">Lead Software Engineer</p>
             </div>
           </a>
-          <a class="team-card-link" href="https://github.com/tfolbrecht">
+          <a class="team-card-link" href="https://github.com/yannafaith" target="_blank">
             <div class="team-card">
-              <img
-                class="team-img"
-                src="./assets/team/kayanna-chandler.jpg"
-                alt="Kayanna Chandler - Back End Software Engineer"
-              />
+              <div class="team-image">
+                <img
+                  class="team-img"
+                  src="./assets/team/kayanna-chandler.jpg"
+                  alt="Kayanna Chandler - Back End Software Engineer"
+                />
+                <div class="overlay">
+                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  </div>
+  
+              </div>
               <p class="team-member-name">Kayanna Chandler</p>
               <p class="team-member-title">Back End Software Engineer</p>
             </div>
           </a>
-          <a class="team-card-link" href="https://github.com/tfolbrecht">
+          <a class="team-card-link" href="https://github.com/macjabeth" target="_blank">
             <div class="team-card">
-              <img
-                class="team-img"
-                src="./assets/team/jonathan-picazo.jpg"
-                alt="Jonathan Picazo - Front End Software Engineer"
-              />
+              <div class="team-image">
+                <img
+                  class="team-img"
+                  src="./assets/team/jonathan-picazo.jpg"
+                  alt="Jonathan Picazo - Front End Software Engineer"
+                />
+                <div class="overlay">
+                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  </div>
+  
+              </div>
               <p class="team-member-name">Jonathan Picazo</p>
               <p class="team-member-title">Front End Software Engineer</p>
             </div>
           </a>
-          <a class="team-card-link" href="https://github.com/tfolbrecht">
+          <a class="team-card-link" href="https://github.com/tfolbrecht" target="_blank">
             <div class="team-card">
-              <img
-                class="team-img"
-                src="./assets/team/thomas-folbrecht.jpg"
-                alt="Thomas Folbrecht - Front End Software Engineer"
-              />
+              <div class="team-image">
+                <img
+                  class="team-img"
+                  src="./assets/team/thomas-folbrecht.jpg"
+                  alt="Thomas Folbrecht - Front End Software Engineer"
+                />
+                <div class="overlay">
+                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  </div>
+  
+              </div>
               <p class="team-member-name">Thomas Folbrecht</p>
               <p class="team-member-title">Front End Software Engineer</p>
             </div>
           </a>
-          <a class="team-card-link" href="https://github.com/danpatrickoneill">
+          <a class="team-card-link" href="https://github.com/danpatrickoneill" target="_blank">
             <div class="team-card">
-              <img
-                class="team-img"
-                src="./assets/team/daniel-oneill.jpg"
-                alt="Daniel O'Neill - Web UI Software Engineer"
-              />
+              <div class="team-image">
+                <img
+                  class="team-img"
+                  src="./assets/team/daniel-oneill.jpg"
+                  alt="Daniel O'Neill - Web UI Software Engineer"
+                />
+                <div class="overlay">
+                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  </div>
+  
+              </div>
               <p class="team-member-name">Daniel O'Neill</p>
               <p class="team-member-title">Web UI Software Engineer</p>
             </div>
           </a>
-          <a class="team-card-link" href="https://github.com/chrisipanaque">
+          <a class="team-card-link" href="https://github.com/chrisipanaque" target="_blank">
             <div class="team-card">
-              <img
-                class="team-img"
-                src="./assets/team/christian-ipanaque.jpg"
-                alt="Christian Ipanaque - Web UI Software Engineer"
-              />
+              <div class="team-image">
+                <img
+                  class="team-img"
+                  src="./assets/team/christian-ipanaque.jpg"
+                  alt="Christian Ipanaque - Web UI Software Engineer"
+                />
+                <div class="overlay">
+                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  </div>
+              </div>
               <p class="team-member-name">Christian Ipanaque</p>
               <p class="team-member-title">Web UI Software Engineer</p>
             </div>
@@ -301,6 +336,9 @@
           Join Now
         </button>
       </a>
+      <div class="footer-copyright">
+        Copyright © 2019 - <a href="https://lambdaschool.com/" target="_blank"><span class="lambda">Lambda School</span></a> - <span class="white">How-to Team, March 2019</span>
+      </div>
     </footer>
     <!-- JavaScript for mobile menu -->
     <script src="./js/main.js"></script>
