padding and margin adjustments, team section redefinement

--- a/public/index.html
+++ b/public/index.html
@@ -80,8 +80,7 @@
             </a>
           </div>
           <div class="navigation-cta">
-            <a href="https://howto-frontend.netlify.com/login"
-            target="_blank">
+            <a href="https://howto-frontend.netlify.com/login" target="_blank">
               <div class="navigation-cta-login">Login</div>
             </a>
             <a href="https://howto-frontend.netlify.com/signup" target="_blank">
@@ -123,12 +122,14 @@
               <div class="header-description-button-container">
                 <a
                   class="header-description-login-anchor"
-                  href="https://howto-frontend.netlify.com/login" target="_blank"
+                  href="https://howto-frontend.netlify.com/login"
+                  target="_blank"
                   ><button class="header-description-login">Login</button></a
                 >
                 <a
                   class="header-description-joinnow-anchor"
-                  href="https://howto-frontend.netlify.com/signup" target="_blank"
+                  href="https://howto-frontend.netlify.com/signup"
+                  target="_blank"
                   ><button class="header-description-joinnow">
                     Join Now
                   </button></a
@@ -209,11 +210,17 @@
           <p></p>
         </div>
       </section>
+      <!-- How TO - Image Hover Overlay: -->
+      <!-- source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_fade -->
       <section class="team" id="team">
         <div class="team-title"><h2>Meet The Team</h2></div>
         <div class="team-cards">
-          <a class="team-card-link" href="https://github.com/tgreenhalgh" target="_blank">
-            <div class="team-card">
+          <div class="team-card">
+            <a
+              class="team-card-link"
+              href="https://github.com/tgreenhalgh"
+              target="_blank"
+            >
               <div class="team-image">
                 <img
                   class="team-img"
@@ -221,15 +228,25 @@
                   alt="Thomas Greenhalgh - Lead Software Engineer"
                 />
                 <div class="overlay">
-                  <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  <div class="overlay-text">
+                    View Github<img
+                      class="github-icon"
+                      src="./assets/github-profile-link.svg"
+                      alt="Github Profile Link"
+                    />
+                  </div>
                 </div>
               </div>
               <p class="team-member-name">Thomas Greenhalgh</p>
               <p class="team-member-title">Lead Software Engineer</p>
-            </div>
-          </a>
-          <a class="team-card-link" href="https://github.com/yannafaith" target="_blank">
-            <div class="team-card">
+            </a>
+          </div>
+          <div class="team-card">
+            <a
+              class="team-card-link"
+              href="https://github.com/yannafaith"
+              target="_blank"
+            >
               <div class="team-image">
                 <img
                   class="team-img"
@@ -237,16 +254,25 @@
                   alt="Kayanna Chandler - Back End Software Engineer"
                 />
                 <div class="overlay">
-                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  <div class="overlay-text">
+                    View Github<img
+                      class="github-icon"
+                      src="./assets/github-profile-link.svg"
+                      alt="Github Profile Link"
+                    />
                   </div>
-  
+                </div>
               </div>
               <p class="team-member-name">Kayanna Chandler</p>
               <p class="team-member-title">Back End Software Engineer</p>
-            </div>
-          </a>
-          <a class="team-card-link" href="https://github.com/macjabeth" target="_blank">
-            <div class="team-card">
+            </a>
+          </div>
+          <div class="team-card">
+            <a
+              class="team-card-link"
+              href="https://github.com/macjabeth"
+              target="_blank"
+            >
               <div class="team-image">
                 <img
                   class="team-img"
@@ -254,16 +280,25 @@
                   alt="Jonathan Picazo - Front End Software Engineer"
                 />
                 <div class="overlay">
-                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  <div class="overlay-text">
+                    View Github<img
+                      class="github-icon"
+                      src="./assets/github-profile-link.svg"
+                      alt="Github Profile Link"
+                    />
                   </div>
-  
+                </div>
               </div>
               <p class="team-member-name">Jonathan Picazo</p>
               <p class="team-member-title">Front End Software Engineer</p>
-            </div>
-          </a>
-          <a class="team-card-link" href="https://github.com/tfolbrecht" target="_blank">
-            <div class="team-card">
+            </a>
+          </div>
+          <div class="team-card">
+            <a
+              class="team-card-link"
+              href="https://github.com/tfolbrecht"
+              target="_blank"
+            >
               <div class="team-image">
                 <img
                   class="team-img"
@@ -271,16 +306,25 @@
                   alt="Thomas Folbrecht - Front End Software Engineer"
                 />
                 <div class="overlay">
-                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  <div class="overlay-text">
+                    View Github<img
+                      class="github-icon"
+                      src="./assets/github-profile-link.svg"
+                      alt="Github Profile Link"
+                    />
                   </div>
-  
+                </div>
               </div>
               <p class="team-member-name">Thomas Folbrecht</p>
               <p class="team-member-title">Front End Software Engineer</p>
-            </div>
-          </a>
-          <a class="team-card-link" href="https://github.com/danpatrickoneill" target="_blank">
-            <div class="team-card">
+            </a>
+          </div>
+          <div class="team-card">
+            <a
+              class="team-card-link"
+              href="https://github.com/danpatrickoneill"
+              target="_blank"
+            >
               <div class="team-image">
                 <img
                   class="team-img"
@@ -288,16 +332,25 @@
                   alt="Daniel O'Neill - Web UI Software Engineer"
                 />
                 <div class="overlay">
-                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  <div class="overlay-text">
+                    View Github<img
+                      class="github-icon"
+                      src="./assets/github-profile-link.svg"
+                      alt="Github Profile Link"
+                    />
                   </div>
-  
+                </div>
               </div>
               <p class="team-member-name">Daniel O'Neill</p>
               <p class="team-member-title">Web UI Software Engineer</p>
-            </div>
-          </a>
-          <a class="team-card-link" href="https://github.com/chrisipanaque" target="_blank">
-            <div class="team-card">
+            </a>
+          </div>
+          <div class="team-card">
+            <a
+              class="team-card-link"
+              href="https://github.com/chrisipanaque"
+              target="_blank"
+            >
               <div class="team-image">
                 <img
                   class="team-img"
@@ -305,13 +358,19 @@
                   alt="Christian Ipanaque - Web UI Software Engineer"
                 />
                 <div class="overlay">
-                    <div class="text">View Github<img class="github-icon" src="./assets/github-profile-link.svg" alt="Github Profile Link"></div>
+                  <div class="overlay-text">
+                    View Github<img
+                      class="github-icon"
+                      src="./assets/github-profile-link.svg"
+                      alt="Github Profile Link"
+                    />
                   </div>
+                </div>
               </div>
               <p class="team-member-name">Christian Ipanaque</p>
               <p class="team-member-title">Web UI Software Engineer</p>
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
       </section>
     </div>
@@ -337,7 +396,11 @@
         </button>
       </a>
       <div class="footer-copyright">
-        Copyright © 2019 - <a href="https://lambdaschool.com/" target="_blank"><span class="lambda">Lambda School</span></a> - <span class="white">How-to Team, March 2019</span>
+        Copyright © 2019 -
+        <a href="https://lambdaschool.com/" target="_blank"
+          ><span class="lambda">Lambda School</span></a
+        >
+        - <span class="white">How-to Team, March 2019</span>
       </div>
     </footer>
     <!-- JavaScript for mobile menu -->
