team section clippath

--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,8 @@
     <!-- How TO - Image Hover Overlay: -->
     <!-- source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_fade -->
     <section class="team" id="team">
-      <div class="team-title"><h2>Meet The Team</h2></div>
+      <div class="team-title"><h2>Meet The Team</h2>
+      <p>Get to know the talented engineers who powered How-To.</p></div>
       <div class="team-cards">
         <div class="team-card">
           <a
