Edited copy for accuracy/clarity/grammar

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
                 Contribute.
               </h1>
               <p>
-                A community of high achievers and scholars that prioritize
+                A community of high achievers and scholars who prioritize
                 everyday learning.
               </p>
               <div class="header-description-button-container">
@@ -151,7 +151,7 @@
           <img
             class="content-image-img"
             src="./assets/learn-image-color-001.svg"
-            alt="Learn - How-To has everything you need for a healthier, happier, and more productive day"
+            alt="A person in a suit leaning against a large mobile phone"
           />
         </div>
         <div class="content-text">
@@ -176,7 +176,7 @@
           <img
             class="content-image-img"
             src="./assets/discover-image-color-001.svg"
-            alt="Discover - Let us serve up a random how-to so you’ll always leave our app a little wiser than you came."
+            alt="A person encircled by a swirl of documents"
           />
         </div>
         <div class="content-text">
@@ -184,9 +184,9 @@
           <p>
             From the mundane to the magical, How-To lets you browse, search and
             filter how-tos to suit your needs. With our easy to use tools,
-            How-To will take you from IDK to DIY in no time flat. Not sure what
-            you’re looking for? Let us serve up a random how-to so you’ll always
-            leave here a little wiser than you came.
+            How-To will take you from IDK to DIY in no time flat. No matter what
+            you're looking for, you’ll always leave here a little wiser than you
+            came.
           </p>
           <p></p>
         </div>
@@ -196,7 +196,7 @@
           <img
             class="content-image-img"
             src="./assets/contribute-image-color-001.svg"
-            alt="Contribute - How-To makes it easy to create and edit your own how-tos and share them with our community of passionate learners."
+            alt="A person tacking presentation slides to a wall"
           />
         </div>
         <div class="content-text">
@@ -214,8 +214,10 @@
     <!-- How TO - Image Hover Overlay: -->
     <!-- source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_image_overlay_fade -->
     <section class="team" id="team">
-      <div class="team-title"><h2>Meet The Team</h2>
-      <p>Get to know the talented engineers who powered How-To.</p></div>
+      <div class="team-title">
+        <h2>Meet The Team</h2>
+        <p>Get to know the talented engineers who power How-To.</p>
+      </div>
       <div class="team-cards">
         <div class="team-card">
           <a
