refactor code, remove comments and console logs

--- a/public/index.html
+++ b/public/index.html
@@ -127,10 +127,10 @@
                   ><button class="header-description-login">Login</button></a
                 >
                 <a
-                  class="header-description-joinnow-anchor"
+                  class="header-description-join-anchor"
                   href="https://howto-frontend.netlify.com/signup"
                   target="_blank"
-                  ><button class="header-description-joinnow">
+                  ><button class="header-description-join">
                     Join Now
                   </button></a
                 >
@@ -147,7 +147,7 @@
         </div>
       </header>
       <section class="content-panel" id="learn">
-        <div class="content-image image-straight">
+        <div class="content-image content-image-normal">
           <img
             class="content-image-img"
             src="./assets/learn-image-color-001.svg"
@@ -161,7 +161,7 @@
             how-to at a time. How-To has everything you need for a healthier,
             happier, and more productive day. Whether you’re a consumer or a
             creator, it’s never been easier to find, create and share tips and
-            tricks with like-minded lifehackers.
+            tricks with like-minded life hackers.
           </p>
           <p>
             We know resolutions can be hard to keep, and if self-help books
@@ -171,8 +171,8 @@
           </p>
         </div>
       </section>
-      <section class="content-panel reverse" id="discover">
-        <div class="content-image image-reverse">
+      <section class="content-panel content-panel-reverse" id="discover">
+        <div class="content-image content-image-reverse">
           <img
             class="content-image-img"
             src="./assets/discover-image-color-001.svg"
@@ -192,7 +192,7 @@
         </div>
       </section>
       <section class="content-panel" id="contribute">
-        <div class="content-image image-straight">
+        <div class="content-image content-image-normal">
           <img
             class="content-image-img"
             src="./assets/contribute-image-color-001.svg"
@@ -216,7 +216,7 @@
     <section class="team" id="team">
       <div class="team-title">
         <h2>Meet The Team</h2>
-        <p>Get to know the talented engineers who power How-To.</p>
+        <p>Get to know the talented and dedicated engineers who power How-To.</p>
       </div>
       <div class="team-cards">
         <div class="team-card">
